tests: change yaml name
