# src/dtos/res/swagger.yml
@@ -4,7 +4,7 @@ info:
     email: DL-T-Magic.Hugo@telekom.de
     name: Team Hugo
   description: A microservice to manage presales order confirmations
-  title: Order Confirmation Service
+  title: Greeting Service
   version: 0.9.0
 servers:
   - url: /
@@ -54,15 +54,6 @@ components:
         error:
           type: string
           example: ""
-        firstName:
-          type: string
-          example: "Jenny"
-        lastName:
-          type: string
-          example: "Schmuck"
-        salutation:
-          type: string
-          example: "Frau"
       required:
         - error
     SuccessMessage:
